--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Local Weather</title>
+  <title>Weather Zipline V2</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
   <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
   <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body>
 
   <section class="container-fluid">
-    <h1 class='text-primary bg-info'>Free Code Camp Zipline</h1>
-    <h2 class='text-primary bg-info'>Local Weather!</h2>
+    <h1>FreeCodeCamp</h1>
+    <h2>Local Weather</h2>
     <div class="well">
       <p id="weather"></p>
       <form action="/select-metric">
@@ -44,10 +46,8 @@
       </a>
       <a href="http://www.freecodecamp.com/rafase282" target='_blank'>
     (<i class="fa fa-fire fa-fw"></i>)
-  </a>
-      </p>
+  </a></p>
   </footer>
-
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
   <script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
   <script src="js/index.js"></script>
